--- a/src/app/components/pokemon-list/pokemon-list.component.html
+++ b/src/app/components/pokemon-list/pokemon-list.component.html
@@ -1,4 +1,4 @@
 <div *ngFor="let pokemon of pokemons">
-    <img [src]="pokemon.sprites?.front_default" alt="{{ pokemon.name }}">
-  </div>
+  <p>{{ pokemon.name }}</p>
+ </div>
   
