--- a/src/app/pages/pokemon-catalogue/pokemon-catalogue.page.html
+++ b/src/app/pages/pokemon-catalogue/pokemon-catalogue.page.html
@@ -1,5 +1,6 @@
-
-  <div *ngFor="let pokemon of pokemons">
+<div *ngFor="let pokemon of pokemons">
+  <div class="pokemon-card">
+    <img [src]="pokemon.image" alt="{{ pokemon.name }}">
     <p>{{ pokemon.name }}</p>
   </div>
-
+</div>
