added h1 text for lits page

--- a/src/app/pages/pokemon-catalogue/pokemon-catalogue.page.html
+++ b/src/app/pages/pokemon-catalogue/pokemon-catalogue.page.html
@@ -1,3 +1,4 @@
+<h1>Showing 50 pokemons</h1>
 <div *ngFor="let pokemon of pokemons">
   <div class="pokemon-card">
     <img [src]="pokemon.image" alt="{{ pokemon.name }}">
