added button for each pokemon, loggin index

--- a/src/app/pages/pokemon-catalogue/pokemon-catalogue.page.html
+++ b/src/app/pages/pokemon-catalogue/pokemon-catalogue.page.html
@@ -1,7 +1,8 @@
-<h1>Showing 50 pokemons</h1>
-<div *ngFor="let pokemon of pokemons">
+<div *ngFor="let pokemon of pokemons; let i = index;">
   <div class="pokemon-card">
     <img [src]="pokemon.image" alt="{{ pokemon.name }}">
     <p>{{ pokemon.name }}</p>
+    <button (click)="logIndex(i)">Log Index</button>
   </div>
 </div>
+
