added grid and capitalized first letters

--- a/src/app/pages/pokemon-catalogue/pokemon-catalogue.page.html
+++ b/src/app/pages/pokemon-catalogue/pokemon-catalogue.page.html
@@ -1,8 +1,11 @@
+
+<h1>Showing 50 pokemons</h1>
+<div class="pokemon-card-container">
 <div *ngFor="let pokemon of pokemons; let i = index;">
-  <div class="pokemon-card">
-    <img [src]="pokemon.image" alt="{{ pokemon.name }}">
-    <p>{{ pokemon.name }}</p>
-    <button (click)="saveIndexAndName(pokemon.name, i)">Log Index</button>
+ <div class="pokemon-card">
+      <img [src]="pokemon.image" alt="{{ pokemon.name }}">
+      <p>{{ pokemon.name }}</p>
+      <button (click)="saveIndexAndName(pokemon.name, i)">Log Index</button>
+    </div>
   </div>
 </div>
-
