display correct button text for user

--- a/src/app/pages/pokemon-catalogue/pokemon-catalogue.page.html
+++ b/src/app/pages/pokemon-catalogue/pokemon-catalogue.page.html
@@ -5,7 +5,7 @@
  <div class="pokemon-card">
       <img [src]="pokemon.image" alt="{{ pokemon.name }}">
       <p>{{ pokemon.name }}</p>
-      <button (click)="saveIndexAndName(pokemon.name, i)">Log Index</button>
+      <button (click)="saveIndexAndName(pokemon.name, i)">gotta catch (em all)</button>
     </div>
   </div>
 </div>
