--- a/src/app/pages/pokemon-catalogue/pokemon-catalogue.page.scss
+++ b/src/app/pages/pokemon-catalogue/pokemon-catalogue.page.scss
@@ -4,8 +4,8 @@
   
   }
   .pokemon-card {
-    background-color: rgba(255, 255, 255, 0.8);
-    border: 2px solid rgba(1, 1, 1, 1);
+    background-color: #8df3a8;
+    border: 2px solid rgb(232, 227, 227);
     font-size: 40px;
     text-align: center;
     text-transform: capitalize;
