post catched pokemons

--- a/src/app/pages/pokemon-catalogue/pokemon-catalogue.page.html
+++ b/src/app/pages/pokemon-catalogue/pokemon-catalogue.page.html
@@ -5,7 +5,8 @@
       <img [src]="pokemon.image" alt="{{ pokemon.name }}">
       <p>{{ pokemon.name }}</p>
       <div *ngIf="pokemon.catched">hei</div>
-      <button (click)="markAsCatched(pokemon, i)">gotta catch (em all)</button>
+      <button (click)="catchAndSave(pokemon, i)">gotta catch (em all)</button>
+
     </div>
   </div>
 </div>
