--- a/src/app/pages/pokemon-catalogue/pokemon-catalogue.page.html
+++ b/src/app/pages/pokemon-catalogue/pokemon-catalogue.page.html
@@ -1,12 +1,10 @@
 <h1>Showing 50 pokemons</h1>
 <div class="pokemon-card-container">
   <div *ngFor="let pokemon of pokemons; let i = index;">
-    <div class="pokemon-card">
+    <div class="pokemon-card" [class.caught]="pokemon.catched" [class.not-caught]="!pokemon.catched">
       <img [src]="pokemon.image" alt="{{ pokemon.name }}">
-      <p>{{ pokemon.name }}</p>
-      <div *ngIf="pokemon.catched">Catched</div>
+      <p class="pokemon-title">{{ pokemon.name }}</p>
       <button (click)="catchAndSave(pokemon, i)">gotta catch (em all)</button>
-
     </div>
   </div>
 </div>
