--- a/src/app/pages/trainer/trainer.page.html
+++ b/src/app/pages/trainer/trainer.page.html
@@ -1,1 +1,6 @@
-<p>trainer works!</p>
+
+  <div *ngFor="let pokemon of pokemons; let i = index;">
+      <img [src]="pokemon.image" alt="{{ pokemon.name }}">
+      <p>{{ pokemon.name }}</p>
+    </div>
+  
