--- a/src/app/pages/trainer/trainer.page.html
+++ b/src/app/pages/trainer/trainer.page.html
@@ -1,6 +1,11 @@
 
+    <h1>Showing catched pokemons</h1>
+<div class="pokemon-card-container">
   <div *ngFor="let pokemon of pokemons; let i = index;">
+    <div class="pokemon-card" [class.caught]="pokemon.catched" [class.not-caught]="!pokemon.catched">
       <img [src]="pokemon.image" alt="{{ pokemon.name }}">
-      <p>{{ pokemon.name }}</p>
+      <p class="pokemon-title">{{ pokemon.name }}</p>
+      <button >Release</button>
     </div>
-  
+  </div>
+</div>
