created login func

--- a/src/app/components/landing-form/landing-form.component.html
+++ b/src/app/components/landing-form/landing-form.component.html
@@ -1,1 +1,6 @@
-<p>landing-form works!</p>
+<form #loginForm="ngForm" (ngSubmit)="onSubmit(loginForm)">
+  <label for="username">Enter Username:</label>
+  <input type="text" id="username" name="username" ngModel #name="ngModel" />
+
+  <button type="submit">Login</button>
+</form>
