added function for release button

--- a/src/app/pages/trainer/trainer.page.html
+++ b/src/app/pages/trainer/trainer.page.html
@@ -5,7 +5,7 @@
     <div class="pokemon-card" [class.caught]="pokemon.catched" [class.not-caught]="!pokemon.catched">
       <img [src]="pokemon.image" alt="{{ pokemon.name }}">
       <p class="pokemon-title">{{ pokemon.name }}</p>
-      <button >Release</button>
+      <button (click)="releasePokemon(pokemon, i, 'release')">Release</button>
     </div>
   </div>
 </div>
