--- a/src/app/pages/pokemon-catalogue/pokemon-catalogue.page.html
+++ b/src/app/pages/pokemon-catalogue/pokemon-catalogue.page.html
@@ -1,4 +1,7 @@
 <h1>Showing 50 pokemons</h1>
+<button (click)="onButtonClicked()">Next page</button>
+
+
 <div class="pokemon-card-container">
   <div *ngFor="let pokemon of pokemons; let i = index;">
     <div class="pokemon-card" [class.caught]="pokemon.catched" [class.not-caught]="!pokemon.catched">
