--- a/src/app/pages/pokemon-catalogue/pokemon-catalogue.page.html
+++ b/src/app/pages/pokemon-catalogue/pokemon-catalogue.page.html
@@ -1,6 +1,6 @@
 <h1>Showing 50 pokemons</h1>
-<button (click)="previousPage()">Previous Page</button>
-<button (click)="nextPage()">Next page</button>
+<button (click)="updateOffsetPage(-50)">Previous Page</button>
+<button (click)="updateOffsetPage(50)">Next page</button>
 
 
 <div class="pokemon-card-container">
