--- a/src/app/components/landing-form/landing-form.component.html
+++ b/src/app/components/landing-form/landing-form.component.html
@@ -1,5 +1,5 @@
 <form #loginForm="ngForm" (ngSubmit)="onSubmit(loginForm)">
-  <label for="username">Enter Username:</label>
+  <label for="username">Enter Trainer:</label>
   <input type="text" id="username" name="username" ngModel #name="ngModel" />
 
   <button type="submit">Login</button>
