--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,1 +1,20 @@
-/*TODO: Add css for links*/
+a {
+    text-decoration: none; 
+    padding: 10px 20px; 
+    margin: 10px; 
+    background-color: #007bff;
+    color: #fff; 
+    border-radius: 5px; 
+    display: inline-block; 
+  }
+  .red-button {
+    text-decoration: none;
+    padding: 10px 20px;
+    margin: 10px;
+    background-color: #ff0000;
+    color: #fff;
+    border-radius: 5px;
+    display: inline-block;
+    float: right;
+  }
+  
